--- a/BlazorProject/Shared/NavMenu.razor
+++ b/BlazorProject/Shared/NavMenu.razor
@@ -24,7 +24,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="listtimetable">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Timetable
             </NavLink>
         </li>
     </ul>
