added selected day binding

--- a/TimeTable/Pages/TimeTablePage.razor
+++ b/TimeTable/Pages/TimeTablePage.razor
@@ -4,7 +4,7 @@
 
 <h3>TimeTablePage</h3>
 
-<select id="selectDay">
+<select id="selectDay" @bind="@selectedDay">
     @foreach (var day in DataAccess.GetDays())
     {
         <option>@day</option>
@@ -12,7 +12,32 @@
 </select>
 
 
+<button @onclick="AddDay">Add</button>
+<button>Get</button>
+
 <LessonTable Day=@selectedDay/>
+
+
 @code {
-    TimeTableDay selectedDay = DataAccess.GetTimeTableDay("Today");
+    string selectedDay = "Monday";
+
+
+
+    public void AddDay()
+    {
+        
+
+        DataAccess.SaveTimeTableDay(new TimeTableDay
+        {
+            DayName = "Sunday",
+            Subjects =
+            new List<Subject>
+            {
+                    new Subject {Name = "MDK 01 04", Teacher = "Nacharov" },
+                    new Subject {Name = "MDK 01 04", Teacher = "Nacharov" },
+            }
+
+        }
+        );
+    }
 }
