--- a/BlazorProject/Shared/NavMenu.razor
+++ b/BlazorProject/Shared/NavMenu.razor
@@ -27,6 +27,12 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Timetable
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="listtimetable2">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Timetable2
+            </NavLink>
+        </li>
     </ul>
 </div>
 
