--- a/RaspisanieSofia/Shared/NavMenu.razor
+++ b/RaspisanieSofia/Shared/NavMenu.razor
@@ -1,5 +1,6 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">RaspisanieSofia</a>
+﻿
+<div class="top-row pl-4 navbar navbar-dark">
+    <a class="navbar-brand" href="">BlazorProject</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,6 +21,11 @@
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="listtimetable">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Timetable
             </NavLink>
         </li>
     </ul>
