--- a/TimeTable/Pages/TimeTablePage.razor
+++ b/TimeTable/Pages/TimeTablePage.razor
@@ -29,12 +29,14 @@
 
         DataAccess.SaveTimeTableDay(new TimeTableDay
         {
-            DayName = "Sunday",
+            DayName = "Thursday",
             Subjects =
             new List<Subject>
             {
                     new Subject {Name = "MDK 01 04", Teacher = "Nacharov" },
+                    new Subject {Name = "Geometry", Teacher = "Nacharov" },
                     new Subject {Name = "MDK 01 04", Teacher = "Nacharov" },
+                    new Subject {Name = "Mathematic", Teacher = "Nacharov" },
             }
 
         }
