--- a/TimeTable/Shared/LessonTable.razor
+++ b/TimeTable/Shared/LessonTable.razor
@@ -1,7 +1,7 @@
 ﻿@using TimeTable;
 <h3>LessonTable</h3>
 
-<table>
+<table class="table">
     <thead>
         <tr>
             <td>Subject</td>
@@ -16,7 +16,6 @@
     
     </tr>
 }
-
 
 </table>
 
