--- a/Schedule/Shared/Lessons.razor
+++ b/Schedule/Shared/Lessons.razor
@@ -25,7 +25,7 @@
                     <tr>
                         <td>@(i + 1)</td>
                         <td>
-                            <input type="number" class="form-control" placeholder="Classroom" @bind="@subject.Classroom" />
+                            <input type="text" class="form-control" placeholder="Classroom" @bind="@subject.Classroom" />
                         </td>
                         <td>
                             <input type="text" class="form-control" placeholder="Subject Name" @bind="@subject.Name" />
@@ -65,7 +65,9 @@
     </tbody>
 </table>
 
-<button type="button" class="btn btn-info" @onclick="() => AddNewRow()"/>
+<button type="button" class="btn btn-info" @onclick="() => AddNewRow()">
+    New subject
+</button>
 
 @code {
     [Parameter]
@@ -85,5 +87,11 @@
 
     private void DeleteSubject(Subject subject) => ScheduleService.DeleteSubject(Day, subject);
 
-    private void AddNewRow() => ScheduleService.AddNewSubject(Day);
+    private void AddNewRow()
+    {
+        if (Day == null)
+            return;
+        var subject = ScheduleService.AddNewSubject(Day);
+        EnableEditing(true, subject);
+    }
 }
