--- a/TimeTable/Shared/NavMenu.razor
+++ b/TimeTable/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Timetable
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="information">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Information
+            </NavLink>
+        </li>
     </ul>
 </div>
 
