--- a/TimeTable/Pages/_Host.cshtml
+++ b/TimeTable/Pages/_Host.cshtml
@@ -4,6 +4,7 @@
 @{
     Layout = null;
 }
+}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -32,5 +33,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
+    <script src="~/js-interopt.js"></script>
 </body>
 </html>
