--- a/TimeTable/Pages/InformationPage.razor
+++ b/TimeTable/Pages/InformationPage.razor
@@ -4,48 +4,12 @@
 @inject IJSRuntime Reader
 
 <h3>InformationPage</h3>
-<p>Name</p>
-<input type="text" @bind="@Name" />
 
+<InfoElement InfoName="Name"/>
+<InfoElement InfoName="Mail"/>
+<InfoElement InfoName="City"/>
+<InfoElement InfoName="Phone number"/>
 
 @code {
-    public string InfoName { get; set; } = "Name";
-    private string _name  { get; set; }
-    public string Name
-    {
-        get => _name;
-        set
-        {
-            _name = value;
-            LocalStorageSave();
-        }
-    }
-
-
-    LocalStorageService storage;
-
-    protected override void OnInitialized()
-    {
-        storage = new LocalStorageService(Reader);
-        LocalStorageLoad();
-    }
-
-    public async void LocalStorageSave()
-    {
-        await storage.SetStringAsync(InfoName, Name);
-
-    }
-
-    public async void LocalStorageLoad()
-    {
-        try
-        {
-            Name = await storage.GetStringAsync(InfoName);
-            StateHasChanged();
-        }
-        catch
-        {
-
-        }
-    }
+    
 }
