--- a/BlazorProject/Shared/NavMenu.razor
+++ b/BlazorProject/Shared/NavMenu.razor
@@ -33,6 +33,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Timetable2
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="localpages">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Registration
+            </NavLink>
+        </li>
     </ul>
 </div>
 
