--- a/Raspisaniye/Shared/NavMenu.razor
+++ b/Raspisaniye/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Raspisaniye</a>
+    <a class="navbar-brand" href="">Schedule</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -18,8 +18,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="schedule">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Schedule
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="questions">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Questions
             </NavLink>
         </li>
     </ul>
